# non-professional-programmer

./: README.md
build_third_party/gflags/: README.md
build_third_party/glog/: README.md
build_third_party/gtest/: README.md
glog_gflag_gtest/: CMakeLists.txt  README.md  extern_dep.cmake
glog_gflag_gtest/cicd/: build_x86_ubuntu.sh  meta.json  version_get.py
glog_gflag_gtest/cmake/: CPM.cmake
glog_gflag_gtest/src/: CMakeLists.txt  flags.cpp  flags.h  test_main.cpp
glog_gflag_gtest/src/config/: gflags_x86.conf
glog_gflag_gtest/src/launch/: launch_x86.sh
